--- a/css/photojekyll.css
+++ b/css/photojekyll.css
@@ -3,13 +3,14 @@ a {
 }
 
 header {
-  padding: 40px 0 0 120px;
+  padding: 25px 0 0 125px;
 }
 
 .site-title {
-  font-size: 24px;
+  font-size: 23px;
   color: #444;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .site-title:hover {
@@ -21,12 +22,12 @@ header {
   list-style: none;
   padding: 0;
   float: left;
-  padding: 40px 0 0 120px;
+  padding: 35px 0 0 120px;
   margin: 0;
 }
 
 .nav li {
-
+  margin: 3px 0;
 }
 
 .nav li a {
@@ -38,7 +39,7 @@ header {
 
 .nav li.current a {
   background-color: #bbb;
-  color: #fff;
+  color: #fff !important;
   text-shadow: rgba(0, 0, 0, 0.0976563) 0px -1px 1px;
   border-radius: 2px;
 }
@@ -49,9 +50,39 @@ header {
 
 .content {
   margin-left: 370px;
-  padding-top: 40px;
+  margin-top: 43px;
+  width: 650px;
+  position: relative;
 }
 
 .photos > div {
   display: none;
 }
+
+.photos > div > img {
+  cursor: pointer;
+}
+
+.photos .title {
+  margin-top: 10px;
+  font-size: 13px;
+}
+
+.photos .subtitle {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.photo-nav {
+  font-size: 11px;
+  position: absolute;
+  right: 0;
+  top: -25px;
+}
+
+.photo-nav a {
+  color: #666;
+}
+
+.photo-nav a:hover {
+  color: #000;
